laravel-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
spec:
  selector:
    matchLabels:
      app: laravel
  replicas: 1 # 副本数量
  strategy: # 部署策略
    type: RollingUpdate # 滚动更新
    rollingUpdate: # 滚动更新参数
      maxSurge: 1 # 更新过程中同时在线最大 Pods 数量
      maxUnabailable: 0 # 更新过程中不可用过的最大 Pods 数量
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel # 容器名称
          image: # 镜像
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: laravel
spec:
  selector:
    app:laravel
  ports:
    - port: 80 # 暴露的端口
      targetPort: 80 # 目标容器的端口
      nodePort: 30081
  type: NodePort
