laravel-nginx-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-nginx
spec:
  selector:
    matchLabels:
      app: laravel-nginx
  replicas: 1 # 副本数量
  strategy: # 部署策略
    type: RollingUpdate # 滚动更新
    rollingUpdate: # 滚动更新参数
      maxSurge: 1 # 更新过程中同时在线最大 Pods 数量
      maxUnavailable: 0 # 更新过程中不可用过的最大 Pods 数量
  template:
    metadata:
      labels:
        app: laravel-nginx
    spec:
      containers:
        - name: laravel # 容器名称
          image: maxlcoder/laravel-docker:1.0.9 # 这个是自制的示例镜像，包含项目代码 和 php 环境（php-cli & php-fpm）
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: laravel-code
              mountPath: /var/www/laravel # laravel 容器的挂载地址，共享代码
            - name: laravel-init-command
              mountPath: /var/www/laravel-init.sh
              subPath: laravel-init.sh
          lifecycle:
            postStart:
              exec:
                command: ["sh", "-C", "/var/www/laravel-init.sh"]
        - name: nginx
          image: nginx
          ports:
            - containerPort: 8081 # 指定容器暴露的端口
          volumeMounts:
            - name: laravel-code
              mountPath: /var/www/laravel # nginx 容器的挂载地址
            - name: nginx-laravel-config # 挂载配置
              mountPath: /etc/nginx/conf.d/laravel.conf # 指定容器内对应的挂载点，也就是将挂载名对应的内容挂载到容器内这个设定的挂载点
              subPath: laravel.conf
      volumes:
        - name: laravel-code # laravel 容器和 nginx 容器共享该目录，也即是代码共享
          emptyDir: {}
        - name: nginx-laravel-config # 挂载名
          configMap:
            name: nginx-laravel-config # 将 name=config 的 configMap 配置加载
            items:
              - key: ningx-config
                path: laravel.conf
        - name: laravel-init-command # 这里采用了同一份配置，选取不同的 data 值
          configMap:
            name: nginx-laravel-config
            defaultMode: 0777
            items:
              - key: laravel-init-command
                path: laravel-init.sh       
              
                
---

apiVersion: v1
kind: Service
metadata:
  name: laravel-nginx-service # service 名称
spec:
  selector: # 拥有 app=nginx label 的 pod 属于该 service，也就是上面定义的 pod
    app: laravel-nginx
  ports:
    - port: 8081
      targetPort: 8081
  #     nodePort: 30080
  # type: NodePort
