mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql # Pod 标签，也就是 mysql-deployment.yaml 中定义的 Pod 标签
  ports:
    - port: 3306 # service 对外部服务暴露的端口
      targetPort: 3306 # 提供服务的容器端口，也就是之前 mysql-deployment.yaml 中定义的 容器端口
