nginx-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80


---

apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector: # 拥有 app=nginx label 的 pod 属于该 service，也就是上面定义的 pod
    app: nginx
  ports:
    - port: 8082
