redis-deplyment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector: # 目标选择器，方便被管理，主要用于匹配目标
    matchLabels: # 指定匹配标签，这里可以选择其他的匹配，例如 matchExpressions 匹配符合对应表达式的资源，这里很显然是匹配标签 `app: redis` 的对象
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
          - containerPort: 6379 # redis 服务端口，
    
---

apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
