ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: laravel-ingress
spec:
  rules:
  - host: hello.laraveltest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: laravel-nginx-service
            port:
              number: 8081
